# Auction-App

./: README.md
auction_app/: Cargo.toml  README.md
auction_app/migrations/: 20250410132202_create_users_table.sql
auction_app/src/: main.rs  web_socket.rs  web_socket_models.rs
auction_app/src/handlers/: authentication_handlers.rs  mod.rs  other_handlers.rs  players_handlers.rs  rooms_handler.rs
auction_app/src/middlewares/: authentication_middleware.rs  mod.rs  players_middlewares.rs  rooms_middleware.rs
auction_app/src/models/: authentication_models.rs  mod.rs  other_models.rs  players_models.rs  room_models.rs
