[package]
name = "auction_app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum={version = "0.7", features = ["ws"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
http-body = "1"
hyper = { version = "1", features = ["full"] } 
parseit = "0.1.2"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = "9.3.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "postgres", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }
redis = { version = "0.23", features = ["tokio-comp"] }
futures = "0.3"